chore: :gear: Use docker image to validate renovate config file

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -30,4 +30,8 @@ pre-commit:
       tags: infra lint
       files: git diff --name-only --staged
       glob: '.renovaterc'
-      run: npx --package renovate -c 'renovate-config-validator'
+      run: |
+        docker run \
+          -v $PWD/.renovaterc:/usr/src/app/.renovaterc \
+          --rm -it -e LOG_LEVEL=debug renovate/renovate:slim  \
+          renovate-config-validator
